src/objects/Collaboration_Space_Item__c.object
<CustomObject>
    <fields>
        <fullName>Collaboration_Space_Folder__c</fullName>
        <label>Collaboration Space Folder</label>
        <referenceTo>Collaboration_Space_Folder__c</referenceTo>
        <relationshipLabel>Collaboration Space Items</relationshipLabel>
        <relationshipName>Collaboration_Space_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; Salesforce_Record__c , Name , &apos;_blank&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Record__c</fullName>
        <label>Salesforce Record</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Collaboration Space Item</label>
    <nameField>
        <label>Collaboration Space Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collaboration Space Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>